--- a/conquer.ipynb
+++ b/conquer.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "cCWzpwM1jdGB"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "xR_4rxZdMy1I"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       },
       "outputs": [],
       "source": [
-        "def conquest(image, bound):\n",
+        "def conquer(image, bound):\n",
         "    result = np.zeros((height, width, 3), dtype=np.uint8)  # массив заполненный нулями\n",
         "    for y in range(height):\n",
         "        for x in range(width):\n",
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "V6uUozTqjqpL",
         "colab": {
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "9ZFXev32HBzn"
       },
@@ -221,11 +221,11 @@
         "stop = 0.1  # чем меньше, тем лучше\n",
         "bound = sum(color) / 3 + 10  # шум ниже этого значения\n",
         "array = np.array(image)  # изображение в массив (r, g, b)\n",
-        "result = conquest(array, bound)\n",
+        "result = conquer(array, bound)\n",
         "difference = np.mean(abs(result - array))\n",
         "while difference > stop:\n",
         "    array = result\n",
-        "    result = conquest(array, bound)\n",
+        "    result = conquer(array, bound)\n",
         "    difference = np.mean(abs(result - array))"
       ]
     },
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -271,7 +271,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16_2TnFTln-uGE6pdPhPWjAX0lOP_zBLJ",
-      "authorship_tag": "ABX9TyOPBc8ISDjVsKR8/QTWslvU",
+      "authorship_tag": "ABX9TyPYZKV2xosfE2eobiLQ65CZ",
       "include_colab_link": true
     },
     "kernelspec": {
