--- a/blur.ipynb
+++ b/blur.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPAysBNSwyOv/ljKqtxZpp",
+      "authorship_tag": "ABX9TyOsF7OomNbdsCbWNXcWJxsg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,13 +81,13 @@
         "    ax = np.linspace(-(size // 2), size // 2, size)\n",
         "    xx, yy = np.meshgrid(ax, ax)\n",
         "    kernel = np.exp(-(xx**2 + yy**2) / (2.0 * sigma**2))\n",
-        "    kernel[size // 2, size // 2] = 0  # центр - 0, чтобы не учитывать текущий пиксель\n",
+        "    kernel[size // 2, size // 2] = 0  # центр - 0, чтобы не брать в расчет текущий пиксель\n",
         "    return kernel / np.sum(kernel)  # нормализуем ядро"
       ],
       "metadata": {
         "id": "T542_KtMRlbr"
       },
-      "execution_count": 57,
+      "execution_count": 64,
       "outputs": []
     },
     {
