Minor visual update

--- a/blur.ipynb
+++ b/blur.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3u3Qqds5wuOvKoFLZ3ujL",
+      "authorship_tag": "ABX9TyNA3+Ubg3TqAu2A9XlXoyI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "                weight_sum = np.sum(kernel * mask)\n",
         "                altered_channel[i, j] = np.sum(weighted_window) / weight_sum if weight_sum > 0 else image[i, j, channel]  # считаем новое значение пикселя (среднее только по 'хорошим')\n",
         "        altered_image[:, :, channel] = altered_channel\n",
-        "    image[marked] = altered_image[marked].astype(np.uint8)  # меняем только \"плохие\" пиксели"
+        "    image[marked] = altered_image[marked].astype(np.uint8)  # меняем только 'плохие' пиксели"
       ],
       "metadata": {
         "id": "ics9u1-iSibK"
