Another minor visual update

--- a/blur.ipynb
+++ b/blur.ipynb
@@ -211,22 +211,11 @@
         "color = set_color(input(\"Цвет шума: \"))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "EZc5ea26-SCl",
-        "outputId": "eb5fa11e-0ae2-4fef-b909-d1fcff2926d6"
+        "collapsed": true
       },
-      "execution_count": 149,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Цвет шума: red\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
